--- a/assets/css/AlmiskStyling.css
+++ b/assets/css/AlmiskStyling.css
@@ -35,6 +35,10 @@
     4.2 Packages posts wrap
     4.3 Single Package post wrap
 
+** // The Different pages, Contact , about , 404 
+    5. The Different pages styling
+     5.1 the contact page
+
 
 */
 
@@ -243,7 +247,7 @@ header.opened .slided-menu-wrap {
 }
 
 .slided-menu-wrap ul li a {
-  font-size: 2.25rem;
+  font-size: 1.75rem;
   font-family: "poppins-bold";
   line-height: 1.25;
   color: var(--dark-color);
@@ -392,16 +396,12 @@ header.opened .slided-menu-wrap {
 }
 .service-wrap {
   position: relative;
-  padding-bottom: 295px;
+ 
 }
+
 .service-description {
-  position: absolute;
-  width: calc(50% - 1.5rem);
-  height: 295px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+  margin-bottom: 3rem;
+} /*
 .description-one {
   right: 0;
   top: 0;
@@ -409,21 +409,22 @@ header.opened .slided-menu-wrap {
 .description-two {
   bottom: 0;
   left: 0;
-}
+}*/
 .service-description h4 {
   font-size: 2rem;
   line-height: 1.2;
 }
 .services-cards-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-column-gap: 3rem;
   grid-row-gap: 3rem;
 }
 .service-slide {
   position: relative;
-  height: 590px;
+  height: 50vh;
+  max-height: 460px;
   overflow: hidden;
   border-radius: 25px;
   filter: drop-shadow(0px 5px 10px rgba(16, 25, 53, 0.5));
@@ -460,11 +461,11 @@ header.opened .slided-menu-wrap {
   width: 100%;
   object-fit: cover;
   object-position: center;
-}
+}/*
 .service-slide:nth-last-of-type(odd) {
   position: relative;
   top: calc(590px / 2);
-}
+}*/
 .service-slide-content h5 {
   font-size: 1.75rem;
   margin: 0.5rem;
@@ -525,10 +526,11 @@ header.opened .slided-menu-wrap {
 .package-post-wrap {
   display: flex;
   padding-top: calc(3rem + 72px);
+  justify-content: space-between;
 }
 .package-content {
   padding: 1rem 1rem 1rem 0;
-  width: 40%;
+  width: 45%;
 }
 .package-content h1 {
   font-size: 1.25rem;
@@ -564,7 +566,7 @@ header.opened .slided-menu-wrap {
 .package-img {
   position: relative;
   z-index: 100;
-  width: 60%;
+  width: 50%;
 }
 .package-img img {
   width: 100%;
@@ -632,7 +634,7 @@ header.opened .slided-menu-wrap {
   transform: translateY(-50%);
 }
 .package-typo-wrap h1 {
-  font-size: 4.5rem;
+  font-size: 3.5rem;
   line-height: 1.4;
   color: var(--dark-color);
   margin-bottom: 3rem;
@@ -666,6 +668,9 @@ header.opened .slided-menu-wrap {
 }
 .package-slide a h3 {
   color: var(--main-color);
+}
+.package-slide p{
+  max-width: 80%;
 }
 /* 4.3 Single Package post wrap -------------------------  */
 .single-package-wrap {
@@ -855,6 +860,26 @@ header.opened .slided-menu-wrap {
 .more-package-posts-link:hover svg {
   transform: translateX(5px);
 }
+/*
+=========================================================
+** 5. The Different pages styling
+=========================================================
+
+** 5.1 the Contact page  ==============================
+*/
+
+.contact-wrap{
+  position: relative;
+  height: 100vh;
+}
+.contact-wrap h1 span{
+  display: block;
+}
+.contact-wrap h1{
+  margin-bottom: 1rem;
+  line-height: 1.2;
+}
+
 /*
 =========================================================
 ** .. The footer styling
